# analyze-npm

./: .gitignore  Cargo.toml  LICENSE  README.md  install.js
src/: main.rs
